# mrklt

./: Cargo.toml  LICENSE-MIT
bindings/js/: Cargo.toml  README.md  justfile  package.json
bindings/js/src/: lib.rs
bindings/js/testjs/: .editorconfig  .gitignore  package.json  test.js
lib/: Cargo.toml
lib/src/: lib.rs  merge.rs  proof_map.rs
libmrkl/: Cargo.toml
libmrkl/src/: lib.rs  merge.rs  proof.rs
src/: common.rs  lib.rs  main.rs  merge.rs  proof.rs  proof_map.rs  proofelem.rs
