[package]
name = "mrkl"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "libmrkl"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "mrkl"
path = "src/main.rs"
required-features = ["std"]

[dependencies]
blake2 = "0.8.1"
groestl = "0.8.0"
ripemd160 = "0.8.0"
ripemd320 = "0.8.0"
sha2 = "0.8.1"
sha3 = "0.8.2"
whirlpool = "0.8.1"

# Bin deps. Bin requires std, but lib does not.
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
structopt = { version = "0.3.9", optional = true }
hex = { version = "0.4.0", optional = true }

[dev-dependencies]
blake2 = "0.8.1"
rand = "0.7.3"

[features]
default = ["std"]
std = ["serde", "hex", "structopt"]
