[package]
name = "mrkl"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
libmrkl = { path = "libmrkl" }
blake2 = "0.8.1"
groestl = "0.8.0"
ripemd160 = "0.8.0"
ripemd320 = "0.8.0"
sha2 = "0.8.1"
sha3 = "0.8.2"
whirlpool = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.9"
hex = "0.4.0"
