[package]
name = "mrklj"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"
description = """
Merkle root generation, merkle proof generation and verification.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/docknetwork/rify"
readme = "README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
blake2 = "0.9.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
mrklt = { path = "../../lib", features = ["serde"] }

